# incito

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
apps/desktop/: .env.example  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/docs/: docusaurus.config.ts  package.json  sidebars.ts
apps/landing/: package.json  tailwind.config.ts
docs/: README.md  mcp.md
docs/security/: README.md
docs/testing/: README.md  test-strategy.md
docs/ux/: README.md  jtbd.md  personas.md  user-stories.md  workflows.md
mastra/: package.json
mastra/src/: api.ts  index.ts  stdio.ts  types.ts
prompts/: prd-generator.md
scripts/: build-claude-code-server.sh  sync-version.js
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CenterPane.tsx  ErrorBoundary.tsx  FolderSelect.tsx  NavSidebar.tsx  NewPromptDialog.tsx  PromptEditor.tsx  PromptHeader.tsx  PromptList.tsx  PromptListItem.tsx  RightPanel.tsx  SearchPage.tsx  SettingsPage.tsx  TagBadge.tsx  TagSelector.tsx  TagsPage.tsx  (+4 more)
(+364 files in other folders)
